[package]
name = "fondant"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bitvec = { version = "1.0.1", default-features = false }
bytemuck = { version = "1.21.0", features = ["wasm_simd"] }
minipng = "0.1.1"
serde = { version = "1.0.217", default-features = false, features = ["derive", "serde_derive"] }
